# push_swap

./: CMakeLists.txt  Makefile
includes/: push_swap.h
src/: cost_and_target.c  error_handling.c  ft_split.c  index_sorting.c  libft.c  move_elements.c  parse_and_validate.c  push.c  push_swap.c  reverse.c  rotate.c  sort_stacks.c  stack_init.c  stack_utils.c  swap.c  test_args.c  test_main.c  test_stack.c
